--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 nav {
-  background-color: rgb(70,130,180);
+  background-color: rgb(169,169,169);
 }
 
 header > h1 {
@@ -10,9 +10,9 @@ header > h1 {
   color: rgb(0,0,0);
 }
 
-.jumbotron {
+/* .jumbotron {
   background-color: rgb(176, 196, 222);
-}
+} */
 
 /* .jumbotron > div {
   background-color: rgb(70,130,180);
