--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ header > h1 {
   color: rgb(0,0,0);
 }
 
-/* .jumbotron {
+.jumbotron {
   background-color: rgb(176, 196, 222);
 } */
 
 /* .jumbotron > div {
   background-color: rgb(70,130,180);
-} */
+}
 
 body {
   background-color: rgb(105,105,105);
