--- a/style.css
+++ b/style.css
@@ -16,14 +16,28 @@
 } */
 
 
-button {
+/* button {
   background-color: transparent;
   border: none;
   cursor: pointer;
   padding: 0;
 }
 
-img {
-  width: 100px; /* Adjust the width to your preference */
-  height: 100px; /* Adjust the height to your preference */
-}
+/* img {
+  width: 100px; /* Adjust the width to your preference 
+  height: 100px; /* Adjust the height to your preference
+} */
+
+        .button {
+            display: inline-block;
+            background-color: #0077FF; /* Button background color */
+            color: #FFFFFF; /* Text color */
+            padding: 10px 20px; /* Adjust padding as needed */
+            text-decoration: none; /* Remove underline from the link */
+            border-radius: 5px; /* Add rounded corners */
+        }
+
+        .button img {
+            vertical-align: middle; /* Align the image vertically */
+            margin-right: 10px; /* Add some spacing between the image and text */
+        }
