--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ button {
 img {
   width: 100px;
   height: 100px;
-  vertical-align: middle;
-  margin-right: 10px;
+/*   vertical-align: middle;
+  margin-right: 10px; */
 }
-
