--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@ button {
   border: none;
   cursor: pointer;
   padding: 0;
+
+  vertical-align: middle;
 }
 
 img {
-  width: 100px;
-  height: 100px;
-/*   vertical-align: middle;
-  margin-right: 10px; */
+  width: 50px;
+  height: 50px;
 }
